# project-c

./: .bumpversion.toml  .env.example  .gitignore  LICENSE  README.md  agent.py  audio_processor.py  chroma_client.py  context_builder.py  db_client.py  docker-compose.yml  download_videos.py  embed_transcripts.py  main.py  pyproject.toml  retriever.py  transcribe.py
app/: main.py
app/agent/: __init__.py  agent.py
app/pipeline/: __init__.py  downloader.py  embedder.py  transcriber.py
app/retriever/: __init__.py  retriever.py
app/storage/: __init__.py  chroma_client.py  db_client.py
init-scripts/: 01-init.sql
