[project]
name = "think-bro"
version = "0.0.0"
description = "Semantic AI Agent for YouTube Wisdom & Gym Knowledge"
authors = [
    {name = "Robert Iftimie", email = "thunderray16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

dependencies = [
    "psycopg2>=2.9.10",
    "sentence-transformers>=2.2.2",
    "numpy>=1.21.0",
    "tqdm>=4.65.0",
    "torch>=2.0.0",
    "yt-dlp>=2023.12.30",
    "ffmpeg-python>=0.2.0",
    "chromadb>=0.4.22",
]

[project.urls]
Repository = "https://github.com/yourusername/think-bro"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
thinkbro = "main:main" 