[tool.poetry]
name = "project-c"
version = "0.0.3"
description = "Semantic AI Agent for YouTube Wisdom & Gym Knowledge"
authors = ["Robert Iftimie <thunderray16@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.10"
psycopg2 = ">=2.9.10"
sentence-transformers = ">=2.2.2"
numpy = ">=1.21.0"
tqdm = ">=4.65.0"
torch = ">=2.0.0"
yt-dlp = ">=2023.12.30"
ffmpeg-python = ">=0.2.0"
chromadb = ">=0.4.22"

[tool.poetry.scripts]
project-c = "app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 